@@ -328,10 +328,12 @@ help = importString('peak.tools.api_help:APIHelp')
 
 # 'supervise' multiprocess manager
 supervise =
-    naming.LinkRef('zconfig.schema:pkgfile:peak.running/Supervisor.xml')
+    naming.LinkRef(
+        'zconfig.schema:pkgfile:peak.tools/supervisor/Supervisor.xml'
+    )
 
 # 'FastCGI' port listener
-FastCGI = importString('peak.running.supervisor:FCGITemplateCommand')
+FastCGI = importString('peak.tools.supervisor.fastcgi:FCGITemplateCommand')
 
 
 # PEAK versioning tool
@@ -353,8 +355,6 @@ version-config =
 # higher to 'sys.stderr'
 
 * = logs.LogStream(stream=importString('sys.stderr'), level=logs.WARNING)
-
-
 
 
 
